@@ -208,8 +208,13 @@ class Repository
         $db = new Database();
         $db->getIndexer()->deleteRepo($this);
 
-        return Tools::recursiveDelete($this->workDir)
+        $bOk = Tools::recursiveDelete($this->workDir)
             && Tools::recursiveDelete($this->gitDir);
+
+        $not = new Notificator();
+        $not->delete($this);
+
+        return $bOk;
     }
 
     public function getTitle()
